[metadata]
name = pysaavn
version = 2022
author = Ranjodh Singh
author_email = ranjodhsingh1729@gmail.com
description = A Minimal Client for JioSaavn
url = https://github.com/RanjodhSingh1729/PySaavn
long_description = file: README.md
long_description_content_type = text/markdown
keywords = music, songs, jiosaavn
license = MIT License
classifiers = 
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Operating System :: OS Independent

[options]
packages = find:
package_dir = 
    =src

install_requires = 
    wget
    pyDes
    requests
    InquirerPy

zip_safe = True
include_package_data = True

[options.package_data]
* = LICENSE.txt, README.md

[options.entry_points]
console_scripts =
    pysaavn = pysaavn.cli:main

[options.packages.find]
where = src
